<resources>
    <string name="app_name">Remind Me</string>
    <string name="label_eventTitle">Event title: </string>
    <string name="label_eventRemindMe">Remind me every: </string>
    <string name="label_eventDescription">Event description:</string>
    <string name="eventSaveButton">Save</string>
    <string name="eventCancelButton">Cancel</string>
    <string name="newEvent">+</string>
    <string name="empty_list">No results available.</string>
    <string name="placeholder">Placeholder</string>
    <string name="toggle_on">On</string>
    <string name="toggle_off">Off</string>
    <string name="event_delete">Delete</string>
    <string name="title_empty_error">Title is required!</string>
    <string name="description_empty_error">Description is required!</string>
    <string name="time_empty_error">Frequency is required!</string>
    <string name="time_lesserThan_1">Frequency cannot be lesser than 0!</string>
    <string name="delete_dialog_title">Delete confirmation</string>
    <string name="delete_dialog_message">Are you sure you want to delete the selected item?</string>
    <string name="dialog_positive_button">Yes</string>
    <string name="dialog_negative_button">No</string>
    <string name="label_rowCreatedAt">Created at: </string>
    <string name="label_rowFrequency">Frequency: every</string>
    <string name="event_add">Add event</string>


    <string-array name="frequency">
        <item>days</item>
        <item>hours</item>
        <item>minutes</item>
    </string-array>
</resources>
